# MiniC

./: CMakeLists.txt  README.md  TODO.txt  decl.cpp  decl.debug.cpp  decl.hpp  decl.test.cpp  decltest.cpp  expr.cpp  expr.hpp  expr.type_check.cpp  expr_conv.cpp  expr_conv.hpp  expr_conv.test.cpp  expr_rules.cpp  expr_rules.hpp  expr_rules.test.cpp  expr_typing.cpp  expr_typing.hpp  expr_typing.test.cpp  exprtest.cpp  keywords.cpp  keywords.hpp  lexer.cpp  lexer.hpp  lexer.test.cpp  main.cpp  name.hpp  parser.cpp  parser.expr.cpp  parser.hpp  parser.stmt.cpp  parser.test.cpp  printer.cpp  printer.hpp  scope.hpp  stmt.cpp  stmt.hpp  stmttest.cpp  test.mc  (+7 more)
